Добавил получение товара с моделями
