# docs/swagger.yaml
@@ -110,25 +110,137 @@ definitions:
       refresh_token:
         type: string
     type: object
+  option.AddOptionToProductModelDto:
+    properties:
+      option_id:
+        minimum: 1
+        type: integer
+      product_model_id:
+        minimum: 1
+        type: integer
+      value_id:
+        minimum: 1
+        type: integer
+    required:
+    - option_id
+    - product_model_id
+    - value_id
+    type: object
+  option.CreateOptionDto:
+    properties:
+      slug:
+        example: color
+        minLength: 3
+        type: string
+      title:
+        example: Цвет
+        minLength: 3
+        type: string
+    required:
+    - slug
+    - title
+    type: object
+  option.CreateOptionValueDto:
+    properties:
+      info:
+        type: string
+      option_id:
+        example: 4
+        type: integer
+      value:
+        example: Желтый
+        type: string
+    type: object
+  option.Option:
+    properties:
+      id:
+        example: 4
+        type: integer
+      slug:
+        example: color
+        type: string
+      title:
+        example: Цвет
+        type: string
+      values:
+        items:
+          $ref: '#/definitions/option.OptionValue'
+        type: array
+    type: object
+  option.OptionValue:
+    properties:
+      id:
+        example: 44
+        type: integer
+      info:
+        type: string
+      option_id:
+        example: 4
+        type: integer
+      value:
+        example: Желтый
+        type: string
+    type: object
+  option.UpdateOptionDto:
+    properties:
+      title:
+        example: Цвет
+        minLength: 3
+        type: string
+    required:
+    - title
+    type: object
+  product.CreateProducModelImg:
+    properties:
+      img_path:
+        type: string
+      main:
+        type: boolean
+      product_model_id:
+        minimum: 1
+        type: integer
+    required:
+    - img_path
+    - product_model_id
+    type: object
   product.CreateProductDto:
     properties:
       brand_id:
         example: 10
+        minimum: 1
         type: integer
       category_id:
         example: 10
+        minimum: 1
         type: integer
       description:
         example: Отлчиная куртка теплая
         type: string
+      title:
+        example: Куртка теплая
+        minLength: 3
+        type: string
+    required:
+    - brand_id
+    - category_id
+    - title
+    type: object
+  product.CreateProductModelDto:
+    properties:
       discount:
+        example: 10
         type: integer
       price:
         example: 15000
+        minimum: 1
+        type: number
+      product_id:
+        example: 10
+        minimum: 1
         type: integer
-      title:
-        example: Куртка теплая
-        type: string
+    required:
+    - price
+    - product_id
     type: object
   product.Product:
     properties:
@@ -136,17 +248,18 @@ definitions:
         $ref: '#/definitions/product.ProductBrand'
       category:
         $ref: '#/definitions/product.ProductCategory'
+      current_model:
+        $ref: '#/definitions/product.ProductModel'
       description:
         example: Отлчиная куртка теплая
         type: string
-      discount:
-        type: integer
       id:
         example: 1
         type: integer
-      price:
-        example: 15000
-        type: integer
+      models:
+        items:
+          $ref: '#/definitions/product.ProductModel'
+        type: array
       slug:
         type: string
       title:
@@ -182,6 +295,72 @@ definitions:
         type: string
       title:
         example: Верхняя одежда
+        type: string
+    type: object
+  product.ProductModel:
+    properties:
+      discount:
+        type: integer
+      id:
+        example: 1
+        type: integer
+      images:
+        items:
+          $ref: '#/definitions/product.ProductModelImg'
+        type: array
+      options:
+        items:
+          $ref: '#/definitions/product.ProductModelOption'
+        type: array
+      price:
+        example: 15000
+        type: number
+      product_id:
+        type: integer
+    type: object
+  product.ProductModelImg:
+    properties:
+      id:
+        example: 1
+        type: integer
+      img_path:
+        type: string
+      main:
+        type: boolean
+      product_model_id:
+        type: integer
+    type: object
+  product.ProductModelOption:
+    properties:
+      id:
+        example: 4
+        type: integer
+      model_id:
+        example: 4
+        type: integer
+      slug:
+        example: color
+        type: string
+      title:
+        example: Цвет
+        type: string
+      values:
+        items:
+          $ref: '#/definitions/product.ProductModelOptionValue'
+        type: array
+    type: object
+  product.ProductModelOptionValue:
+    properties:
+      id:
+        example: 44
+        type: integer
+      info:
+        type: string
+      option_id:
+        example: 4
+        type: integer
+      value:
+        example: Желтый
         type: string
     type: object
   role.AddRoleToUserDto:
@@ -405,6 +584,227 @@ paths:
       summary: Create category
       tags:
       - category
+  /api/option/:
+    post:
+      consumes:
+      - application/json
+      description: Create option with dto
+      parameters:
+      - description: Create option dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/option.CreateOptionDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Create option
+      tags:
+      - option
+  /api/option/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete option by id
+      parameters:
+      - description: id parameter
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Delete option by id
+      tags:
+      - option
+    get:
+      consumes:
+      - application/json
+      description: Get option by id
+      parameters:
+      - description: id parameter
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/option.Option'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Get option by id
+      tags:
+      - option
+    patch:
+      consumes:
+      - application/json
+      description: Update option with dto
+      parameters:
+      - description: Update option dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/option.UpdateOptionDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Update option
+      tags:
+      - option
+  /api/option/add-to-product-model:
+    post:
+      consumes:
+      - application/json
+      description: Add option to product model
+      parameters:
+      - description: Add to product model dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/option.AddOptionToProductModelDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Add option to product model
+      tags:
+      - option
+  /api/option/value:
+    post:
+      consumes:
+      - application/json
+      description: Create value with dto
+      parameters:
+      - description: Create option value dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/option.CreateOptionValueDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Create value
+      tags:
+      - option
+  /api/option/value:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete option value by id
+      parameters:
+      - description: id parameter
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Delete option value by id
+      tags:
+      - option
   /api/product/:
     post:
       consumes:
@@ -443,11 +843,16 @@ paths:
       - application/json
       description: Get product by title
       parameters:
-      - description: slug parameter
+      - description: product slug parameter
         in: path
         name: slug
         required: true
         type: string
+      - description: model id parameter
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -468,6 +873,70 @@ paths:
           schema:
             $ref: '#/definitions/exception.AppErr'
       summary: Get product by title
+      tags:
+      - product
+  /api/product/add-photo:
+    post:
+      consumes:
+      - application/json
+      description: Add photo to product model
+      parameters:
+      - description: Add photo to product model
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/product.CreateProducModelImg'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Add photo to product model
+      tags:
+      - product
+  /api/product/model:
+    post:
+      consumes:
+      - application/json
+      description: Create product model with dto
+      parameters:
+      - description: Create product model dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/product.CreateProductModelDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.AppErr'
+      summary: Create product-model
       tags:
       - product
   /api/role/:
