# internal/domain/category/model.go
@@ -19,3 +19,12 @@ type Category struct {
 	Level         uint8      `json:"level"`
 	Subcategories []Category `json:"subcategories"`
 }
+
+type CategoryDb struct {
+	Id         int     `json:"category_id" db:"category_id" example:"3"`
+	Title      string  `json:"title" db:"title" example:"Верхняя одежда"`
+	Slug       string  `json:"slug" db:"slug" example:"verhnia-odezhda"`
+	ShortTitle string  `json:"short_title"`
+	ImgPath    *string `json:"img_path" db:"img_path" example:"/static/example.webp"`
+	ParentId   *int    `json:"parent_category_id" db:"parent_category_id" example:"2"`
+}
